--- a/MiPrimeraAplicacion/MainPage.xaml
+++ b/MiPrimeraAplicacion/MainPage.xaml
@@ -6,11 +6,28 @@
         <Label Text="Pokémon Info" 
                FontSize="24"
                HorizontalOptions="Center" />
+
+        <!-- Botón para obtener Pokémon -->
         <Button x:Name="FetchPokemonButton"
                 Text="Fetch Pokémon Data"
                 Clicked="OnFetchPokemonClicked"
                 HorizontalOptions="Center"
                 VerticalOptions="CenterAndExpand" />
+
+        <!-- Botón para limpiar la lista -->
+        <Button x:Name="ClearListButton"
+                Text="Clear List"
+                Clicked="OnClearListClicked"
+                HorizontalOptions="Center"
+                VerticalOptions="CenterAndExpand" />
+
+        <!-- Botón para obtener un Pokémon aleatorio -->
+        <Button x:Name="FetchRandomPokemonButton"
+                Text="Fetch Random Pokémon"
+                Clicked="OnFetchRandomPokemonClicked"
+                HorizontalOptions="Center"
+                VerticalOptions="CenterAndExpand" />
+
         <ScrollView>
             <VerticalStackLayout x:Name="PokemonCardsContainer" />
         </ScrollView>
