--- a/MiPrimeraAplicacion/MainPage.xaml
+++ b/MiPrimeraAplicacion/MainPage.xaml
@@ -1,9 +1,8 @@
 ﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MiPrimeraAplicacion.MainPage"
-             BackgroundColor="White">
+             BackgroundImageSource="pokemon.png">
 
-    <!-- ENVOLVEMOS TODO EN UN SCROLLVIEW -->
     <ScrollView>
         <VerticalStackLayout Padding="20">
 
@@ -11,7 +10,7 @@
                    FontSize="26"
                    FontAttributes="Bold"
                    HorizontalOptions="Center"
-                   TextColor="DarkBlue" />
+                   TextColor="White" />
 
             <!-- Botones con estilos personalizados -->
             <Button x:Name="FetchPokemonButton"
