--- a/MiPrimeraAplicacion/MainPage.xaml
+++ b/MiPrimeraAplicacion/MainPage.xaml
@@ -1,37 +1,35 @@
 ﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MiPrimeraAplicacion.MainPage"
-             BackgroundColor="White">
+             x:Class="MiPrimeraAplicacion.MainPage">
 
-    <!-- ENVOLVEMOS TODO EN UN SCROLLVIEW -->
-    <ScrollView>
-        <VerticalStackLayout Padding="20">
+    <VerticalStackLayout Padding="20">
+        <Label Text="Pokémon Info" 
+               FontSize="24"
+               HorizontalOptions="Center" />
 
-            <Label Text="Pokémon Info" 
-                   FontSize="26"
-                   FontAttributes="Bold"
-                   HorizontalOptions="Center"
-                   TextColor="DarkBlue" />
+        <!-- Botón para obtener Pokémon -->
+        <Button x:Name="FetchPokemonButton"
+                Text="Fetch Pokémon Data"
+                Clicked="OnFetchPokemonClicked"
+                HorizontalOptions="Center"
+                VerticalOptions="CenterAndExpand" />
 
-            <!-- Botones con estilos personalizados -->
-            <Button x:Name="FetchPokemonButton"
-                    Text="Fetch Pokémon Data"
-                    Clicked="OnFetchPokemonClicked"
-                    Style="{StaticResource CustomButtonStyle}" />
+        <!-- Botón para limpiar la lista -->
+        <Button x:Name="ClearListButton"
+                Text="Clear List"
+                Clicked="OnClearListClicked"
+                HorizontalOptions="Center"
+                VerticalOptions="CenterAndExpand" />
 
-            <Button x:Name="ClearListButton"
-                    Text="Clear List"
-                    Clicked="OnClearListClicked"
-                    Style="{StaticResource CustomButtonStyle}" />
+        <!-- Botón para obtener un Pokémon aleatorio -->
+        <Button x:Name="FetchRandomPokemonButton"
+                Text="Fetch Random Pokémon"
+                Clicked="OnFetchRandomPokemonClicked"
+                HorizontalOptions="Center"
+                VerticalOptions="CenterAndExpand" />
 
-            <Button x:Name="FetchRandomPokemonButton"
-                    Text="Fetch Random Pokémon"
-                    Clicked="OnFetchRandomPokemonClicked"
-                    Style="{StaticResource CustomButtonStyle}" />
-
-            <!-- LISTA DE POKÉMON -->
-            <VerticalStackLayout x:Name="PokemonCardsContainer" Spacing="10"/>
-
-        </VerticalStackLayout>
-    </ScrollView>
+        <ScrollView>
+            <VerticalStackLayout x:Name="PokemonCardsContainer" />
+        </ScrollView>
+    </VerticalStackLayout>
 </ContentPage>
